@@ -4,6 +4,7 @@ Changelog
 1.5 - (unreleased)
 ------------------
 
+ * contact-us panel deactivated for translated sites [thuliper, #2954]
  * subfolder_view now use default page if one exists [thuliper, #3318]
 
 1.4 - (2010-06-16)
